preventing page exit after input fields have changed; datatable sequences still have to be covered; ref #628

--- a/collecting_society_portal/static/css/backend.css
+++ b/collecting_society_portal/static/css/backend.css
@@ -69,6 +69,8 @@ h6, .h6 {}
 
 .select2-container { width: 100%!important; } /* widgets in follow-up tabs were too narrow */
 
+.fileupload-buttonbar { display:none; } /* only displayed on file added */
+
 /*******************************************************************************
 
    Small devices (tablets, 768px and up)
